--- a/bdqn_APP/css/ex.css
+++ b/bdqn_APP/css/ex.css
@@ -59,7 +59,7 @@ body{
 	font-size: 18px;
 	line-height: 2em;
 	text-decoration: none;
-	 background-attachment:fixed;
+	 
 	 text-align: justify;
 	 
 	 
@@ -71,7 +71,7 @@ h2{
 	text-shadow: rgb(221,154,190) 6px 5px 5px;
 	font-family: "隶书";
 	font-size: 30px;
-	 background-attachment:fixed;
+	
 	
 }
 
@@ -83,9 +83,13 @@ li{
 p{
 	text-indent: 2em;
 
-	  background-attachment:fixed;
+	 
 }
 
-#xttz{
+
+	ul{
+	height: 150px;
+	position: fixed;
+	padding:8px;
 	
 }
