--- a/myself/css/style.css
+++ b/myself/css/style.css
@@ -1,15 +1,23 @@
 body{
 	
+	margin: 0 ;
+    padding: 0;
 	text-align: center;
-	font-size: 50px;
 	background:  url(../img/back.jpg)  no-repeat;
     background-size:cover ;
-    background-attachment:fixed;
+ 
 }
-header{
+div{
 	
-	 
-	 background-size:cover;
-	background-attachment:fixed;
-   
+}
+div:hover{
+	
+
+	
+}
+img{
+	width: 100%;
+	height: 150px;
+	float: left;
+	display: inline;
 }
